--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.0)
 
 project( saleae_to_hex VERSION 1.0 LANGUAGES CXX )
 
-add_executable(saleae_to_hex saleae_to_hex.cpp)
+add_executable(saleae_to_hex saleae_to_hexdump.cpp)
